force-app/main/default/objects/Public_Event_Venue__c/Public_Event_Venue__c.object-meta.xml
<CustomObject>
    <label>Public Event Venue</label>
    <nameField>
        <displayFormat>PEV-{0000}</displayFormat>
        <label>Public Event Venue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Public Event Venues</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>