force-app/main/default/objects/Public_Event_Venue__c/fields/Public_Event__c.field-meta.xml
<CustomField>
    <fullName>Public_Event__c</fullName>
    <label>Public Event</label>
    <referenceTo>Public_Event__c</referenceTo>
    <relationshipLabel>Public Event Venues</relationshipLabel>
    <relationshipName>Public_Event_Venues</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>