force-app/main/default/objects/Public_Event_Venue__c/validationRules/Prevent_Duplicate_Main_Venue.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Duplicate_Main_Venue</fullName>
    <active>true</active>
    <errorConditionFormula>Public_Event__r.Main_Venue__r.Id = Venue__r.Id</errorConditionFormula>
    <errorMessage>This venue is set as the main venue. Please choose another one.</errorMessage>
</ValidationRule>