force-app/main/default/objects/Public_Event_Venue__c/validationRules/Prevent_Duplicate_Public_Event_Venue.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Duplicate_Public_Event_Venue</fullName>
    <active>true</active>
    <errorConditionFormula>Prevent_Save__c</errorConditionFormula>
    <errorMessage>The same public event venue was created.</errorMessage>
</ValidationRule>